# polln

./: .gitignore  .pollnrc  CLAUDE.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_STATUS_20260313.md  MODEL_GPU_CONFIGURATION.md  README.md  REPO_MANAGEMENT.md  WEBSITE_AUDIT.md  WHITEPAPER_REPOS.md  jest.config.cjs  package-lock.json  package.json  restart3.11.268.40p.txt  test_deepinfra_clean.py  tsconfig.cli.json
.agents-archive/round2/: coordination-architect.md  embedding-space-designer.md  experimental-designer.md  fpic-specialist.md  resource-allocation-specialist.md
.agents-full/round5/: codebase-explorer.md  concept-researcher.md  cross-project-analyst.md  diagram-architect.md  gpu-engineer.md  innovation-scout.md  integration-specialist.md  test-engineer.md  typescript-implementer.md
.agents/round5/: codebase-explorer.md  concept-researcher.md  cross-project-analyst.md  diagram-architect.md  gpu-engineer.md  innovation-scout.md  integration-editor.md  integration-specialist.md  mathematical-formalizer.md  technical-writer.md  test-engineer.md  typescript-implementer.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  performance.yml  pr.yml  release.yml  security.yml
.polln/: colony-state.json
LOG-tensor/: AGENT_ONBOARDING.md  FINAL_ROADMAPS_ONBOARDING.md  NEXT_GENERATION_ONBOARDING.md  SESSION_SUMMARY.md  afterdownload1.md  ai_simulation_sdk.ts  completeconversational.md  cross_model_research_simulation.json  cross_model_research_simulation.ts  deepseek_simulation.ts  efficient_research.py  loop_tiling_simulator.py  model_comparison.py  model_comparison_simulator.py  model_comparison_v2.py  multi_api_simulator.py  multi_model_engine.py  multi_model_simulator.py  perf_opt_simulator.py  phase2_simulation.ts  run_comparison.py  run_model_comparison.py  run_simulations.ts  simulation_runner.js
SuperInstance_Ecosystem/: README.md
agent-messages/: extraction_round11.md  extraction_round12.md  impl_core_round11.md  impl_devops_round10.md  rd_whitepaper_round11.md  round13_academic_writer.md  round13_build_devops-engineer.md  round13_build_security-engineer.md  round13_deployment_case_study_researcher.md  round13_github_devops_research.md  round13_performance_benchmark_engineer.md  round13_podc_research.md  round13_prompt_engineering_analyst.md  round13_rd_agents_spawned.md  round13_security_research.md  round13_smpbot_integration_specialist.md  round13_whitepaper4_research.md  round5_rd_concept_researcher.md  round5_rd_cross_project_analyst.md  round5_wp_diagram_architect.md  round5_wp_integration_editor.md  round5_wp_mathematical_formalizer.md  round6_build_gpu_engineer.md  round6_build_integration_specialist.md  round6_rd_content_strategist.md  round7_impl_backend_developer.md  round7_impl_frontend_developer.md  round7_impl_performance_optimizer.md  round7_impl_qa_engineer.md  round7_impl_security_specialist.md  round8_rd_geometric_tensor.md  round8_rd_log_research.md  round8_rd_origami_research.md  round8_rd_website_content.md  round8_rd_white_paper_organizer.md  round9_impl_backend.md  round9_impl_frontend.md  round9_impl_performance.md  round9_impl_qa.md  round9_impl_security.md  (+5 more)
agent-messages/onboarding/: build_gpu_engineer_round6.md  build_integration_specialist_round6.md  (+30 more)
docs/: CLI_GUIDE.md  GLM47_PLAN.md  INTEGRATION_ROADMAP.md  QA_TESTING_STRATEGY.md  RESEARCH_ARCHIVE_INDEX.md  SECURITY_PROTOCOLS.md  diagram_style_guide.md  mathematical_notation.md  phase4-sprint5-guardian-angel.md  superinstance-openapi.yaml  wiki_navigation_design.md
examples/: README.md  guardian-angel-example.ts  package.json  tsconfig.json
experimental/: gpu-comprehensive-simulation.py
research/lucineer_analysis/lucineer/download/ternaryair/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
research/lucineer_analysis/lucineer/download/ternaryair/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
research/lucineer_analysis/lucineer/download/ternaryair/.github/workflows/: ci.yml
research/lucineer_analysis/lucineer/download/ternaryair/docs/: ARCHITECTURE.md
research/lucineer_analysis/lucineer/download/ternaryair/hardware/fpga/: README.md
research/lucineer_analysis/lucineer/download/ternaryair/hardware/rtl/: kv_cache.sv  rau.sv  synaptic_array.sv  top_level.sv  weight_rom.sv
research/lucineer_analysis/lucineer/download/ternaryair/models/: README.md
research/lucineer_analysis/lucineer/download/ternaryair/models/converter/: ternary_converter.py
research/lucineer_analysis/lucineer/download/ternaryair/security/: SECURITY_MODEL.md
research/lucineer_analysis/lucineer/download/ternaryair/software/examples/: basic_usage.py
research/lucineer_analysis/lucineer/download/ternaryair/software/sdk/ternaryair/: __init__.py  cli.py  config.py  device.py  driver.py  exceptions.py  simulator.py  types.py
research/lucineer_analysis/lucineer/download/ternaryair/software/server/: api.py
research/lucineer_analysis/lucineer/download/ternaryair/tests/unit/: test_sdk.py
research/lucineer_analysis/lucineer/public/SuperInstance_ALL_FILES/Week1-4_Execution_Package/SDK/superinstance-sdk/: pyproject.toml
research/lucineer_analysis/lucineer/public/SuperInstance_ALL_FILES/Week1-4_Execution_Package/SDK/superinstance-sdk/superinstance/: __init__.py  _simulation.py  device.py  errors.py  exceptions.py
scripts/: cli-dev.js  create-whitepaper-repos.sh
server/: yjs-server.d.ts  yjs-server.d.ts.map  yjs-server.js  yjs-server.js.map
website/: .env.development  .env.production  .env.staging  Dockerfile  astro.config.mjs  cloudflare-security.js  docker-compose.override.yml  docker-compose.yml  interview-questions.md  junit-results.xml  lighthouserc.js  package-lock.json  package.json  performance-audit.md  playwright-results.json  vitest.config.ts  wrangler-monitoring.toml  wrangler.toml
white-papers/: 01-SuperInstance-Universal-Cell_mathematical_appendix.md  02-Visualization-Architecture.md  SMPbot_Architecture_White_Paper_7.md  mathematical_proofs.md
(+1555 files in other folders)
